force-app/main/default/objects/CBK_ChangeOwnerConfiguration__mdt/CBK_ChangeOwnerConfiguration__mdt.object-meta.xml
<CustomObject>
    <description>Configuración Change Owner Custom (user, Queue)</description>
    <label>CBK Change Owner Configuration</label>
    <pluralLabel>CBK Change Owner Configuration</pluralLabel>
</CustomObject>