force-app/main/default/objects/CBK_ChangeOwnerConfiguration__mdt/fields/DeveloperNameApp__c.field-meta.xml
<CustomField>
    <fullName>DeveloperNameApp__c</fullName>
    <label>Dev Name App</label>
    <length>255</length>
    <type>Text</type>
</CustomField>