force-app/main/default/objects/CBK_ChangeOwnerConfiguration__mdt/fields/QueueName__c.field-meta.xml
<CustomField>
    <fullName>QueueName__c</fullName>
    <label>Queue Dev. Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>