force-app/main/default/objects/CBK_ChangeOwnerConfiguration__mdt/listViews/Queue.listView-meta.xml
<ListView>
    <fullName>Queue</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Project__c</columns>
    <columns>DeveloperNameApp__c</columns>
    <columns>Type__c</columns>
    <columns>QueueName__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Queue</value>
    </filters>
    <label>Queue</label>
    <language>en_US</language>
</ListView>